Fix bugs in snapshotting, visitCompare, and assert harder on virtual registers (bug 680621, r=sstangl).