js/src/ion/x86/Lowering-x86-inl.h
@@ -57,24 +57,23 @@ VirtualRegisterOfPayload(MDefinition *mir)
     if (mir->isBox()) {
         MDefinition *inner = mir->toBox()->getOperand(0);
         if (!inner->isConstant() && inner->type() != MIRType_Double)
-            return inner->id();
+            return inner->virtualRegister();
     }
-    return mir->id() + VREG_DATA_OFFSET;
+    return mir->virtualRegister() + VREG_DATA_OFFSET;
 }
 
 LUse
 LIRGeneratorX86::useType(MDefinition *mir, LUse::Policy policy)
 {
-    JS_ASSERT(mir->id());
     JS_ASSERT(mir->type() == MIRType_Value);
 
-    return LUse(mir->id() + VREG_TYPE_OFFSET, policy);
+    return LUse(mir->virtualRegister() + VREG_TYPE_OFFSET, policy);
 }
 
 LUse
 LIRGeneratorX86::usePayload(MDefinition *mir, LUse::Policy policy)
 {
-    JS_ASSERT(mir->id());
+    JS_ASSERT(mir->virtualRegister());
     JS_ASSERT(mir->type() == MIRType_Value);
 
     return LUse(VirtualRegisterOfPayload(mir), policy);
@@ -91,7 +90,7 @@ LIRGeneratorX86::fillBoxUses(LInstruction *lir, size_t n, MDefinition *mir)
 {
     if (!ensureDefined(mir))
         return false;
-    lir->getOperand(n)->toUse()->setVirtualRegister(mir->id() + VREG_TYPE_OFFSET);
+    lir->getOperand(n)->toUse()->setVirtualRegister(mir->virtualRegister() + VREG_TYPE_OFFSET);
     lir->getOperand(n + 1)->toUse()->setVirtualRegister(VirtualRegisterOfPayload(mir));
     return true;
 }
